2008-08-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_font_face.c: add
	Cairo::UserFontFace::TextToGlyphsData#need_backward?.

	* test/test_text_to_glyphs_data.rb: add tests for
	Cairo::UserFontFace::TextToGlyphsData.

	* test/test_font_face.rb
	(FontFaceTest#test_toy_font_face_new_with_invalid_family_name):
	add a test for creating Cairo::ToyFontFace with invalid family
	name.
	(FontFaceTest#test_toy_font_face_new): add a test for creating
	Cairo::ToyFontFace with nil family name.

	* src/rb_cairo_font_face.c (cr_toy_font_face_initialize): accept nil.

	* src/rb_cairo_context.c (cr_select_font_face): make family optional.

	* test/test_context.rb
	(ContextTest#test_select_font_face),
	(ContextTest#test_select_font_face_with_invalid_family_name): add
	a test for Cairo::Context#select_font_face.

2008-08-16  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_pkg_config.rb (PkgConfigTest#test_requires_private):
	work on my environment.

	* src/lib/cairo.rb (Cairo.exit_application): add.

	* src/rb_cairo_surface.c: use rb_cairo__invoke_callback().

	* src/rb_cairo_private.c, src/rb_cairo_private.h
	(rb_cairo__invoke_callback): use rb_protect() and exit if an
	exception is raised in callback.

	* src/rb_cairo_font_face.c: support Cairo::UserFontFace.

	* src/rb_cairo_exception.c, src/rb_cairo_private.h
	(rb_cairo__exception_to_status): add.

	* src/rb_cairo_context.c (cr_show_text_glyphs): initialize variables.

	* src/cairo.def, src/rb_cairo.h: add
	rb_cCairo_UserFontFace_TextToGlyphsData.

	* test/test_font_face.rb: add tests for user font.

	* src/rb_cairo_private.[ch] (rb_cairo__text_clusters_from_ruby_object)
	(rb_cairo__glyphs_from_ruby_object): add.

	* test/test_context.rb (ContextTest#test_text_to_glyphs): add a
	test for Cairo::Context#show_text_glyphs.

	* src/rb_cairo_context.c: support Cairo::Context#show_text_glyphs.

	* test/test_text_cluster.rb: add tests for Cairo::TextCluster.

	* test/test_scaled_font.rb (ScaledFontTest#test_text_to_glyphs):